# ChangeLog for gnome-base/libgtop
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgtop/ChangeLog,v 1.186 2008/02/04 04:30:52 jer Exp $

  04 Feb 2008; Jeroen Roovers <jer@gentoo.org> libgtop-2.20.1.ebuild:
  Stable for HPPA (bug #208366).

  03 Feb 2008; Raúl Porcel <armin76@gentoo.org> libgtop-2.20.1.ebuild:
  alpha/ia64/sparc stable wrt #208366

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> libgtop-2.20.1.ebuild:
  Stable on amd64 wrt bug #208366.

  01 Feb 2008; Brent Baude <ranger@gentoo.org> libgtop-2.20.1.ebuild:
  Marking libgtop-2.20.1 ppc64 and ppc stable for bug 208366

  01 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  libgtop-2.20.1.ebuild:
  stable x86, bug 208366

*libgtop-2.20.1 (09 Jan 2008)

  09 Jan 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +libgtop-2.20.1.ebuild:
  bump to 2.20.1

  27 Nov 2007; Jeroen Roovers <jer@gentoo.org> libgtop-2.20.0.ebuild:
  Stable for HPPA (bug #199740).

  26 Nov 2007; Markus Rothe <corsair@gentoo.org> libgtop-2.20.0.ebuild:
  Stable on ppc64; bug #199740

  24 Nov 2007; Brent Baude <ranger@gentoo.org> libgtop-2.20.0.ebuild:
  Marking libgtop-2.20.0 ppc stable for bug 199740

  22 Nov 2007; Raúl Porcel <armin76@gentoo.org> libgtop-2.20.0.ebuild:
  alpha/ia64/sparc stable wrt #199740

  21 Nov 2007; Dawid Węgliński <cla@gentoo.org> libgtop-2.20.0.ebuild:
  Stable on x86 (bug #199740)

  20 Nov 2007; Samuli Suominen <drac@gentoo.org> libgtop-2.20.0.ebuild:
  amd64 stable wrt #199740

*libgtop-2.20.0 (01 Oct 2007)

  01 Oct 2007; Mart Raudsepp <leio@gentoo.org> +libgtop-2.20.0.ebuild:
  New series for Gnome 2.20

  26 Sep 2007; Joshua Kinard <kumba@gentoo.org> libgtop-2.14.9.ebuild:
  Bumping straight to stable to catch up on some small gnome keywords on mips,
  per #191920.

  22 Sep 2007; Tom Gall <tgall@gentoo.org> libgtop-2.14.9.ebuild:
  stable on ppc64

  28 Aug 2007; Jeroen Roovers <jer@gentoo.org> libgtop-2.14.9.ebuild: