@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST libgtop-2.14.9.tar.bz2 772126 RMD160 fc0ea31952cdeb14ef5d3bfd829265fb078bab1e SHA1 f4ce30dfbb6c4d27ac70435afd88f39eab84c0cb SHA256 6b10e1e416d823e7acf7e5665fda7547b1794b62789d8c2d73383fede2bad782
-DIST libgtop-2.20.0.tar.bz2 766106 RMD160 3f03f505995f5bd8b44319c9cf4ba5c4440c4180 SHA1 0b7b7ad57c5b9e8d2fcd3e3f70bf61ba85fbb962 SHA256 5cae684d0af69193d9b6c31bbb90f74350855a23f245aef8538c17a877ba04a5
 DIST libgtop-2.20.1.tar.bz2 770145 RMD160 273facfe0eac4939445cb0addbb719cfe02c2434 SHA1 7f31da6cb67adb8fb67f8cf5aab2e395fc0c1c3b SHA256 1e4d9cdedee5105c99a7bf3363e9bc375bff82923e24f55e475050937f482135
+DIST libgtop-2.20.2.tar.bz2 773428 RMD160 3164940c9a0211f59451a4c38c05c750098f6675 SHA1 50078297b18745696cf37318395e8f61216216f0 SHA256 182320a7ac385edfb80c76202a30e3887d25337ad2aebae4d5cd4bb2c9fe7fc3
 EBUILD libgtop-2.14.9.ebuild 720 RMD160 a42358147ee169c5b8f966e2993af4f551f7a8ff SHA1 c86ebbd2a9e9e0cbec25b10bba8d7aaa7c39240f SHA256 225e85abda8e3c4189dd67763973f50c8ace0671b41d4f953b6f2de1704dc379
-EBUILD libgtop-2.20.0.ebuild 587 RMD160 4330a1d5d989096be3cf6d6f8444fa080a89460b SHA1 c86837b2e4ff90c626542c2ee437ce04b84ef620 SHA256 275223325401f459926c34b4b45e94ac7a22939bdd9d882617678baf6a6ab4c2
 EBUILD libgtop-2.20.1.ebuild 580 RMD160 0fd1523eb7f13cc0c4e2111022b1e9b5e76e4d54 SHA1 c96319cd0b7a7464224fbcdb2cec7f5bf529bcbc SHA256 1f5159ece4145978d032e89ce5978795d4a7ea1d953b149d4c397f50621a0e02
-MISC ChangeLog 21037 RMD160 25bd32843552ed39086f7b96f07ab103897b30cc SHA1 c991104035d2c2dd23313b26e949d2b01fd7face SHA256 3decf8921fc382cf44814b563c363efa443e84928f67496959e705d82b037b1f
+EBUILD libgtop-2.20.2.ebuild 589 RMD160 9e6d8a462dce2e195d5b5ce410d96bce242775a9 SHA1 89151092ec3b649ddeefbd2952ddbd2fbb56ebc7 SHA256 209f8db0f6deb28b71a0a2352c336726d089064faed4624ee7c1dd030495459a
+MISC ChangeLog 21236 RMD160 f74e6bf94d242c814ff0f7513a02bec3b76113c3 SHA1 c80337734f44ebdac8e2b37e9d9af3b59d30df5a SHA256 d29f5836c6696ff8d12b0dda4ae9ae5f8688457748cae1c3e30131e480f19aae
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.8 (GNU/Linux)
+
+iEYEARECAAYFAkfTbX4ACgkQkeYb6olFHJf0/QCdHo1DmCn0y8jwHvHg5NflSij7
+r5AAn0NaJD+wXsuzj5vmuPweDhHI8ULS
+=PtQZ
+-----END PGP SIGNATURE-----
