@@ -1,6 +1,12 @@
 # ChangeLog for gnome-base/libgtop
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgtop/ChangeLog,v 1.186 2008/02/04 04:30:52 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgtop/ChangeLog,v 1.187 2008/03/09 04:54:30 leio Exp $
+
+*libgtop-2.20.2 (09 Mar 2008)
+
+  09 Mar 2008; Mart Raudsepp <leio@gentoo.org> -libgtop-2.20.0.ebuild,
+  +libgtop-2.20.2.ebuild:
+  Version bump to fix memory maps display on kernel 2.6.24 and newer
 
   04 Feb 2008; Jeroen Roovers <jer@gentoo.org> libgtop-2.20.1.ebuild:
   Stable for HPPA (bug #208366).
